no commit message

--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -66,6 +66,7 @@ IMPORT_PATHS                      #Is space-separated list of:
                                   #  - "std": all standard library PACKAGEs
                                   #  - "cmd": all go CLI PACKAGEs
                                   #  - DIR: packages in DIR *.go or go.mod
+                                  #  - FILE.go: if several, must all be in same DIR
                                   #  - def: "."
 
 
