--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -1013,6 +1013,7 @@ package PACKAGE                   #Declare:
                                   #  - package's default import VAR
                                   #Must be first statement
                                   #All *.go within same DIR must have same PACKAGE
+                                  #Always ignored: .*.go, _*.go, testdata/**.go
                                   #Recommended lowercase
 
 package main                      #CLI entry point (as opposed to programmatic)
