no commit message

--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -68,6 +68,10 @@ IMPORT_PATHS                      #Is space-separated list of:
                                   #  - DIR: packages in DIR *.go or go.mod
                                   #  - FILE.go: if several, must all be in same DIR
                                   #  - def: "."
+                                  #Can contain "..." anywhere:
+                                  #  - is like a globbing *
+                                  #  - can expand to 0|1|n PACKAGEs
+                                  #  - can match empty string
 
 
                                              /=+===============================+=\
