--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -11,9 +11,12 @@ TODO:
      - all go CMD
      - all go* executable
      - https://pkg.go.dev/golang.org/x/tools
-     - after go doc
+     - after go doc:
         - https://golang.org/doc/effective_go.html#commentary
         - https://github.com/golang/go/wiki/Comments
+     - after go test:
+        - https://golang.org/cmd/go/#hdr-Testing_flags
+        - https://golang.org/cmd/go/#hdr-Testing_functions
      - https://github.com/golang/go/wiki/GOPATH
      - https://github.com/golang/go/wiki/PackageManagementTools
      - https://github.com/golang/go/wiki/Modules
