no commit message

--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -10,6 +10,38 @@ VERSION ==>                       #See Go language
 
                                              /=+===============================+=\
                                             /  :                               :  \
+                                            )==:            GENERAL            :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+ENVVAR GOFLAGS                    #"-FLAG=VAL ..." applied to every go ..., providing the command has that flag
+
+go version                        #Prints "go version goX.Y.Z GOOS/GOARCH"
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:              ENV              :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+ENVVAR GOENV                      #All Go-related ENVVARs (GO*|CGO*|GCC-related) can be also set in that file
+                                  #using go env -w|-u
+                                  #Def: ~/.config/go/env
+
+go env                            #Prints all GO*|CGO*|GCC-related ENVVARs
+                                  #After default value resolution
+go env "ENVVAR",...               #Print value
+go env -w ENVVAR=VAL,...          #Sets value
+go env -u ENVVAR                  #Unsets value
+
+-json                             #JSON output
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
                                             )==:          IMPORT PATH          :==(
                                             \  :_______________________________:  /
                                              \=+===============================+=/
@@ -29,11 +61,14 @@ import "IMPORT_PATH"              #"IMPORT_PATH" locates the PACKAGE on the file
 ENVVAR GOROOT                     #Global go directory.
                                   #Contains:
                                   #  - binaries (go|gofmt)
+                                  #     - go tool CMD ... forwards to binaries in ENVVAR GOTOOLDIR (readonly),
+                                  #       e.g. GOROOT/pkg/tool/GOOS_GOARCH
                                   #  - standard library
                                   #  - documentation
                                   #Directory structure is non-module-aware one.
                                   #Default: /usr/local/go
                                   #Same directory structure as GOPATH
+ENVVAR GOROOT_FINAL               #Allows separating Global go directory sources from built files
 ENVVAR GOPATH                     #Same syntax as PATH (:-separated on Unix, ;-separated on Windows)
                                   #  - on write, only first element is used
                                   #  - usually, having several elements is not needed
@@ -94,6 +129,11 @@ REPO_PATH                         #End of IMPORT_PATH.
                                   #PACKAGE path within MODULE.
                                   #If single PACKAGE: often "", i.e. top-level inside repository.
 
+MODULE_PATHS                      #,-separated list of MODULE_PATH
+                                  #Can include globbing
+MODULE_PATH_LIST                  #,-separated list of MODULE_PATH[@vMODULE_VERSION]
+                                  #Def to current DIR's MODULE
+
 internal/...                      #Any PACKAGE within an "internal" DIR can only be imported by:
                                   #  - same MODULE
                                   #  - and only internal/../**.go, not internal internal/../../**.go
@@ -114,7 +154,9 @@ REPOSITORY STRUCTURE ==>          #Due to how go CLI works, from repository root
                                   #  - go.mod|sum
 
 GIT ==>                           #This doc assumes git, but other VCS (svn|mercurial|Bazaar|Fossil) are supported
-ENVVAR GIT_ALLOW_PROTOCOL         #"SCHEME:...". Allow additional protocols, e.g. "http"
+
+go build -insecure                #Allow MODULE_PATH to use http: (as opposed to https:)
+ENVVAR GOINSECURE                 #Like -insecure, but as MODULE_PATHS
 
 
                                              /=+===============================+=\
@@ -212,11 +254,40 @@ replace (
   ...                             #Instead of using vMODULE_VERSION, use vMODULE_VERSION2
 )                                 #Not used in deep dependencies
 
-go mod init "MODULE_PATH"         #Creates ./go.mod
+go mod init ["MODULE_PATH"]       #Creates ./go.mod
                                   #If another Go dependency manager used, migrate it
+                                  #Tries to guess MODULE_PATH, e.g. from git info
+
 go mod tidy                       #Removes unused dependencies from go.mod|sum
                                   #Not done automatically
 -v                                #Verbose
+
+go mod edit [GO_MOD_PATH]         #Modifies go.mod
+                                  #Does not resolve MODULE|PACKAGEs after modification
+-module=GO_MOD_PATH               #
+-print                            #Print go.mod after modification
+-json                             #JSON output
+-fmt                              #Normalize|beautify.
+                                  #Implied by all other flags
+-go=VERSION                       #Add "go ..."
+-require=MODULE_PATH@vMODULE_VERSN#Add "require ..."
+                                  #Prefer go get IMPORT_PATH
+-droprequire=MODULE_PATH@...      #Remove "require ..."
+                                  #Prefer go get IMPORT_PATH@none
+-[drop]exclude=...                #Same with "exclude ..."
+-[drop]replace=...=...            #Same with "replace ..."
+
+go mod graph                      #Prints all deep dependencies
+                                  #Each line is "MODULE_PATH REQUIRED_MODULE_PATH2"
+
+go mod why IMPORT_PATHS           #Prints parent dependencies or deep dependencies
+-m                                #Arguments are MODULE_PATH instead
+-vendor                           #Exclude tests
+
+ENVVAR GOMOD                      #Absolute "PATH" to current go.mod.
+                                  #"" if non-module-aware
+                                  #"/dev/null" if none but module-aware
+                                  #Read-only
 
 
                                              /=+===============================+=\
@@ -242,7 +313,6 @@ go get IMPORT_PATHS               #Automatically run by go build|test|list
 -u                                #Upgrade versions of packages already in go.mod
 -t                                #Also get test files
 -ANY_GO_BUILD_FLAG                #
--insecure                         #Allow MODULE_PATH to use http: (as opposed to https:)
 -v                                #Verbose
 -f                                #Verify that forks matches the source repository described in MODULE_PATH
                                   #Only if non-module-aware
@@ -250,6 +320,12 @@ go get IMPORT_PATHS               #Automatically run by go build|test|list
                                   #Only if non-module-aware
 
 go install IMPORT_PATHS           #Very similar to go get, but with fewer flags|capabilities
+                                  #Prefer go get
+
+go mod download MODULE_PATH_LIST  #Like go go get, but with MODULE_PATH, and does not build PACKAGEs
+                                  #Prefer go get
+-x                                #Verbose
+-json                             #JSON output
 
 
                                              /=+===============================+=\
@@ -287,7 +363,7 @@ index.golang.org/index            #Show latest PACKAGEs added to proxy.golang.or
 ?since=DATE                       #Def: none
 ?limit=NUM                        #Max|def: 2000
 
-ENVVAR GONOPROXY                  #,-separated list of MODULE_PATH (can include globbing) that should not use GOPROXY
+ENVVAR GONOPROXY                  #MODULE_PATHS that should not use GOPROXY
                                   #Can be "none"
 ENVVAR GOPRIVATE                  #Combines GONOPROXY + GONOSUMDB
 
@@ -313,7 +389,7 @@ ENVVAR GOSUMDB                    #URL[+PUBLICKEY] to a server that caches PACKA
                                   #Can be "off"
                                   #Def: "sum.golang.org"
 sum.golang.org                    #Run by Google
-ENVVAR GONOSUMDB                  #,-separated list of MODULE_PATH (can include globbing) that should not use GOSUMDB
+ENVVAR GONOSUMDB                  #MODULE_PATHS that should not use GOSUMDB
                                   #Can be "none"
 
 
@@ -337,13 +413,60 @@ ENVVAR GODEBUG=gocacheverify=1    #Bypass GOCACHE and verify it
 ENVVAR GODEBUG=gocachehash=1      #Verbose mode showing what is used in GOCACHE
 ENVVAR GODEBUG=gocachetest=1      #Same but only for tests
 
+ENVVAR GOTMPDIR                   #Temporary directory used by build, e.g. in GOTMPDIR/go-build
+                                  #Def: os.TempDir(), i.e. /tmp on Unix
+
 runtime.GOOS                      #OS name
                                   #Among "linux", "darwin", "windows", "freebsd|netbsd|openbsd|dragonfly", "solaris|illumos", "plan9",
                                   #"aix", "android", "nacl" (Chrome OS), "js" (with GOARCH "wasm")
                                   #Can be set manually with ENVVAR GOOS
 runtime.GOARCH                    #CPU architecture
-                                  #Among "386|amd64[p32]", "arm[64]", "ppc64[le]", "mips[64][le]", "s390x", "riscv64"
+                                  #Among "386|amd64[p32]", "arm[64]", "ppc64[le]", "mips[64][le]", "s390x", "riscv64", "wasm"
                                   #Can be set manually with ENVVAR GOARCH
+ENVVAR GOARM                      #"5|6|7". ARM version, with GOARCH=arm
+ENVVAR GO386                      #"387|sse2". Floating point version, with GOARCH=386
+ENVVAR GOMIPS[64]                 #"hardfloat|softfloat". Floating point version, with GOARCH=mips[64][le]
+ENVVAR GOWASM                     #"FEAT,...". Experimental features, with GOARCH=wasm, among "satconv|signext"
+
+ENVVAR GOHOSTOS|GOHOSTARCH        #Like ENVVAR GOOS|GOARCH except readonly
+
+ENVVAR GOEXE                      #Built file file extension. "" on Unix, ".exe" on Windows
+                                  #Read-only
+ENVVAR GOGCCFLAGS                 #CLI flags passed to cc under the hood
+                                  #Read-only
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:             GCCGO             :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+GCO ==>                           #Default compiler.
+GCC GO ==>                        #Alternative compiler. Prefer default one.
+                                  #Not documented until needed
+ENVVAR GCCGO                      #
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:              CGO              :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+CGO ==>                           #Used to use C from|to Go
+                                  #Only with gc compiler
+                                  #Not documented until needed
+ENVVAR CGO_ENABLED                #
+ENVVAR AR|CC|CCX|FC               #
+ENVVAR CGO_CFLAGS|CPPFLAGS|
+ CXXFLAGS|FFLAGS|
+ LDFLAGS[_ALLOW|DISALLOW]         #
+ENVVAR PKG_CONFIG                 #
+ENVVAR GCCGOTOOLDIR               #
+ENVVAR GO_EXTLINK_ENABLED         #
 
 
                                              /=+===============================+=\
@@ -356,25 +479,6 @@ runtime.GOARCH                    #CPU architecture
 go clean                          #Remove temporary files
 -cache                            #Remove GOCACHE directory
 -testcache                        #Same but only tests
-
-
-                                             /=+===============================+=\
-                                            /  :                               :  \
-                                            )==:              ENV              :==(
-                                            \  :_______________________________:  /
-                                             \=+===============================+=/
-
-
-go env                            #Prints all GO*|CGO* ENVVARs, and also GCC-related ENVVARs
-                                  #After default value resolution
-go env "ENVVAR",...               #Print value
-go env -w ENVVAR=VAL,...          #Sets value
-go env -u ENVVAR                  #Unsets value
-
--json                             #Prints as JSON
-
-ENVVAR GOENV                      #Where go env -w|-u ... is stored (not stored in environment)
-                                  #Def: ~/.config/go/env
 
 
                                              /=+===============================+=\
@@ -404,18 +508,68 @@ gofmt [FILE|DIR...]               #Beautify *.go files
 
 go fmt IMPORT_PATHS               #Runs gofmt -wl
 -n                                #Dry-run
--x                                #Prints underlying gofmt command
+-x                                #Verbose
 
 
                                              /=+===============================+=\
                                             /  :                               :  \
-                                            )==:              CGO              :==(
+                                            )==:              VET              :==(
                                             \  :_______________________________:  /
                                              \=+===============================+=/
 
 
-CGO ==>                           #Used to use C from|to Go
-                                  #Only with gc compiler
-                                  #Not documented until needed
+go vet IMPORT_PATHS               #Lints for programming errors that cannot be caught by compilers, because not 100% sure it is error
+                                  #Exit code non-0 if error
+                                  #Runs all RULE by default
+-RULE=true                        #Only run that RULE
+-RULE=false                       #Do not run that RULE
+-c=NUM                            #Show source, with NUM lines around.
+                                  #-1 (def) to disable.
+-json                             #JSON output
+-vettool=BIN_PATH                 #Use a different linter
+-ANY_GO_BUILD_FLAG                #
+
+AVAILABLE RULES ==>               #
+unreachable                       #Unreachable code
+assign                            #Useless assignments like VAR = VAR
+bools                             #Common mistakes with BOOL
+shift                             #Wrong << >>
+loopclosure                       #Closure of goroutine|deferred FUNC inside a for loop, use VAR iterated by that for loop
+nilfunc                           #FUNC == nil (might have meant FUNC() == nil)
+unsafeptr                         #Invalid conversions with uintptr|unsafe.Pointer
+
+composites                        #Positional arguments to an inline STRUCT from a different PACKAGE
+composites.whitelist              #'STRUCT,...'
+structtag                         #STRUCT tags conventions
+
+stdmethods                        #When using standard library INTERFACEs, check types
+unusedresult                      #Return value not used from a standard library FUNC with no side effects
+unusedresult.funcs "FUNC,..."
+unusedresult.stringmethods
+ "METHOD,..."                     #Customize
+
+errorsas                          #Wrong argument type to errors.As()
+atomic                            #Common mistakes with sync/atomic
+copylocks                         #Passing sync.* as value instead of using pointers
+lostcancel                        #Ensure FUNC from context.With*()->FUNC is called
+printf                            #Check printf-like FUNC arguments
+                                  #By default checks all the ones from standard library
+printf.funcs "STR,..."            #Additional FUNCs to check
+unmarshal                         #Wrong arugment to json.Unmarshal()
+httpresponse                      #defer resp.Body.Close() before checking err != nil
+
+tests                             #Common mistakes in tests
+
+buildtag                          #+build tags syntax errors
+asmdecl                           #Mismatch between ASM and Go
+cgocall                           #Passing a CHAN|MAP|FUNC|SLICE to C, with cgo
 
 
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:              FIX              :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+go tool fix IMPORT_PATHS          #Migrate source files to latest Go version
