--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -6,6 +6,8 @@
 
 TODO:
   - commands:
+     - https://golang.org/cmd/go, only the go * command upper part
+     - https://golang.org/cmd/go/#hdr-Build_modes
      - https://golang.org/cmd/
      - https://golang.org/doc/cmd
      - all go CMD
@@ -17,6 +19,7 @@ TODO:
      - after go test:
         - https://golang.org/cmd/go/#hdr-Testing_flags
         - https://golang.org/cmd/go/#hdr-Testing_functions
+     - ENVVAR GODEBUG (see go doc runtime)
      - https://github.com/golang/go/wiki/GOPATH
      - https://github.com/golang/go/wiki/PackageManagementTools
      - https://github.com/golang/go/wiki/Modules
